<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:fillViewport="true"
    tools:context=".ui.register.ResultFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin7"
        android:gravity="top|center_vertical"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/tv_back_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin24"
            android:layout_marginEnd="@dimen/margin7"
            android:drawablePadding="@dimen/margin7"
            android:padding="@dimen/margin5"
            android:text="@string/confirm_data"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text36"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_arrow" />

        <ProgressBar
            android:id="@+id/pb_konfirmasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateDrawable="@drawable/progress"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_welcome_konfirmasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin24"
            android:layout_marginTop="@dimen/margin10"
            android:padding="@dimen/margin5"
            android:text="@string/info7"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text15" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin36"
            android:layout_marginTop="@dimen/margin10"
            android:layout_marginEnd="@dimen/margin36"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_nama_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/emas"
                android:drawablePadding="20dp"
                android:hint="@string/name"
                android:padding="20dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                app:drawableStartCompat="@drawable/ic_nama" />

            <TextView
                android:id="@+id/tv_email_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/emas"
                android:drawablePadding="20dp"
                android:hint="@string/email"
                android:padding="20dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                app:drawableStartCompat="@drawable/ic_account_circle" />

            <TextView
                android:id="@+id/tv_nim_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:backgroundTint="@color/emas"
                android:drawablePadding="20dp"
                android:hint="@string/nim"
                android:padding="20dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                app:drawableStartCompat="@drawable/ic_nim" />

            <TextView
                android:id="@+id/tv_jurusan_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:backgroundTint="@color/emas"
                android:drawablePadding="20dp"
                android:hint="@string/jurusan"
                android:padding="20dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                app:drawableStartCompat="@drawable/ic_school" />

            <Button
                android:id="@+id/btn_konfirmasi"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/margin17"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/margin17"
                android:background="@drawable/bg_btn2"
                android:backgroundTint="@color/emas"
                android:padding="@dimen/margin7"
                android:text="@string/konfirmasi"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>