<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".ui.beranda.ProfileFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_profile"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@android:color/background_dark"
        app:title="Profile"
        app:titleTextColor="@android:color/background_light" />

    <LinearLayout
        android:id="@+id/data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/margin36"
        android:layout_marginTop="@dimen/margin10"
        android:layout_marginEnd="@dimen/margin36"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_nama_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/emas"
            android:drawablePadding="20dp"
            android:drawableTint="@color/colorPrimary"
            android:hint="@string/name"
            android:padding="20dp"
            android:textColor="@android:color/background_dark"
            android:textColorHint="@android:color/background_dark"
            app:drawableStartCompat="@drawable/ic_nama" />

        <TextView
            android:id="@+id/tv_email_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/emas"
            android:drawablePadding="20dp"
            android:drawableTint="@color/colorPrimary"
            android:hint="@string/email"
            android:padding="20dp"
            android:textColor="@android:color/background_dark"
            android:textColorHint="@android:color/background_dark"
            app:drawableStartCompat="@drawable/ic_account_circle" />

        <TextView
            android:id="@+id/tv_nim_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:backgroundTint="@color/emas"
            android:drawablePadding="20dp"
            android:drawableTint="@color/colorPrimary"
            android:hint="@string/nim"
            android:padding="20dp"
            android:textColor="@android:color/background_dark"
            android:textColorHint="@android:color/background_dark"
            app:drawableStartCompat="@drawable/ic_nim" />

        <TextView
            android:id="@+id/tv_jurusan_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:backgroundTint="@color/emas"
            android:drawablePadding="20dp"
            android:drawableTint="@color/colorPrimary"
            android:hint="@string/jurusan"
            android:padding="20dp"
            android:textColor="@android:color/background_dark"
            android:textColorHint="@android:color/background_dark"
            app:drawableStartCompat="@drawable/ic_school" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/data"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/margin36"
        android:background="@drawable/bg_btn3"
        android:drawableTop="@drawable/ic_logout"
        android:text="@string/logout"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        app:tint="@color/emas" />

</RelativeLayout>